@@ -1,19 +1,24 @@
 package ScanHub.GUI.controllers;
 
 import ScanHub.BE.*;
+import ScanHub.BE.enums.EntityType;
 import ScanHub.BE.enums.ExportMode;
+import ScanHub.BE.enums.LogAction;
 import ScanHub.BE.interfaces.TreeNode;
-import ScanHub.BLL.ScanManager;
-import ScanHub.GUI.util.ThemeManager;
+import ScanHub.GUI.util.ThemeHandler;
+import ScanHub.GUI.util.GlobalKeyHandler;
 import ScanHub.GUI.facade.ModelFacade;
 import ScanHub.GUI.interfaces.IViewController;
 import ScanHub.GUI.models.ScanModel;
 import ScanHub.GUI.util.AlertHelper;
 import ScanHub.GUI.util.ViewHandler;
+import javafx.animation.KeyFrame;
+import javafx.animation.Timeline;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.concurrent.Task;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
@@ -23,16 +28,11 @@ import javafx.scene.control.*;
 import javafx.scene.effect.ColorAdjust;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.input.ClipboardContent;
-import javafx.scene.input.Dragboard;
-import javafx.scene.input.KeyCode;
-import javafx.scene.input.TransferMode;
-import javafx.scene.layout.BorderPane;
-import javafx.scene.layout.FlowPane;
-import javafx.scene.layout.StackPane;
-import javafx.scene.layout.VBox;
+import javafx.scene.input.*;
+import javafx.scene.layout.*;
 import javafx.stage.DirectoryChooser;
 import javafx.stage.Stage;
+import javafx.util.Duration;
 import org.controlsfx.control.SearchableComboBox;
 import org.controlsfx.control.ToggleSwitch;
 
@@ -40,44 +40,58 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.ResourceBundle;
+import java.time.LocalDateTime;
+import java.util.*;
 
 public class ScanController implements Initializable, IViewController {
 
     @FXML private BorderPane workspaceView;
     @FXML private Label lblUsername, lblRole, lblEmptyState;
     @FXML private ToggleSwitch darkMode;
-    @FXML private Button btnScan, btnStop, btnRotLeft, btnRotRight, btnNewDoc, btnSplitDoc, btnDelete, btnUndo, btnExport, btnZoomOut, btnZoomIn;
+    @FXML private Button btnScan, btnStop, btnRotLeft, btnRotRight, btnUndo, btnExport, btnZoomOut, btnZoomIn, btnFileAdjustments;
     @FXML private ComboBox<ExportMode> comboBoxExport;
     @FXML private FlowPane pageGrid;
-    @FXML private Label lblSessionStatus, pageInfoLabel, stDocsLabel, stPagesLabel;
+    @FXML private Label lblSessionStatus, lblCurrentPage, lblCurrentDocument, stDocsLabel, stPagesLabel;
     @FXML private TreeView<TreeNode> boxTreeView;
+    @FXML private Spinner<Integer> spinnerRotation;
+    @FXML private ProgressBar progressBarExport;
+    @FXML private HBox hboxProgressBarExport;
 
-    // Session startup popup
+    // Session Startup Popup
     @FXML private StackPane sessionPopupOverlay;
     @FXML private SearchableComboBox<Profile> comboBoxProfiles;
     @FXML private TextField txtFldBoxId, txtFldGlobalRotation, txtFldGlobalHue, txtFldGlobalBrightness, txtFldGlobalContrast, txtFldGlobalSaturation;
 
-    // File adjustment menu
-    @FXML private StackPane sessionPopupOverlay1;
-    @FXML private TextField txtFldIndividualFileRotation, txtFldIndividualFileHue, txtFldIndividualFileBrightness, txtFldIndividualFileContrast, txtFldIndividualFileSaturation;
+    // File Adjustment Menu
+    @FXML private StackPane fileAdjustmentSideMenu;
+    @FXML private Spinner<Integer> spinnerFileAdjustmentRotation, spinnerFileAdjustmentHue, spinnerFileAdjustmentBrightness,
+            spinnerFileAdjustmentContrast, spinnerFileAdjustmentSaturation, spinnerFileAdjustmentSharpness;
+    @FXML private Slider sliderHue, sliderBrightness, sliderContrast, sliderSaturation, sliderRotation, sliderSharpness;
 
     private Stage currentStage;
     private ModelFacade modelFacade;
     private ScanModel scanModel;
-
+    private User currentUser = null;
     private final ObservableList<Document> documents = FXCollections.observableArrayList();
     private Document selectedDocument;
     private File selectedFile;
+    private Box selectedBox;
+    private ImageView currentPreviewImageView;
     private boolean sessionActive;
 
+    private final TreeItem<TreeNode> root = new TreeItem<>();
+    private final ChangeListener<TreeItem<TreeNode>> treeSelectionListener =
+            (obs, oldValue, newValue) -> onTreeSelectionChanged(newValue);
     private TreeNode draggedNode; // used for drag detection (gets nulled after drop)
+
+    private final Deque<Runnable> undoStack = new ArrayDeque<>();
+    private static final int maxUndos = 30;
+
     private Thread scanThread; // scan loop is controlled by the volatile boolean 'scanning', not thread interruption
     private volatile boolean scanning = false; // volatile: FX-thread writes are immediately visible to the scan thread
-    private static final long scanDelay = 2000; // milliseconds to wait between successive scans in the scan loop
+    private static final long scanDelay = 1000; // milliseconds to wait between successive scans in the scan loop
 
     // Zoom Level stuff
     private double zoomLevel = 1.0; // default
@@ -85,50 +99,61 @@ public class ScanController implements Initializable, IViewController {
     private static final double ZOOM_MIN  = 0.40;
     private static final double ZOOM_MAX  = 3.00;
 
-    private final ChangeListener<TreeItem<TreeNode>> treeSelectionListener =
-            (obs, oldValue, newValue) -> onTreeSelectionChanged(newValue);
-    @FXML
-    private Spinner<Integer> spinnerRotation;
-
     @Override
     public void setModel(ModelFacade modelFacade, Stage currentStage) {
         this.modelFacade = modelFacade;
         this.currentStage = currentStage;
+
+        currentUser = modelFacade.getSessionModel().getCurrentUser();
+        lblUsername.setText(currentUser.getUsername());
+        lblRole.setText("Role: " + currentUser.getRole().toString());
+
         initializeProfileComboBox();
 
-        lblUsername.setText(modelFacade.getSessionModel().getCurrentUser().getUsername());
-        lblRole.setText("Role: " + modelFacade.getSessionModel().getCurrentUser().getRole().toString());
+        currentStage.setOnCloseRequest(event -> {
+            endScanSession();
+        });
     }
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        initializeTreeView(boxTreeView);
         initializeKeyboardShortcuts();
         initializeExportComboBoxes();
-        spinnerRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(0, 270, 90, 90));
+        spinnerRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(1, 360, 5, 1));
         comboBoxProfiles.valueProperty().addListener((obs, oldValue, newValue) -> updateProfileAdjustmentsFields(newValue));
 
+        spinnerFileAdjustmentRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-360, 360, 0, 1));
+        spinnerFileAdjustmentHue.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentBrightness.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentContrast.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentSaturation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentSharpness.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+
+        bindSlider(sliderHue, spinnerFileAdjustmentHue);
+        bindSlider(sliderBrightness, spinnerFileAdjustmentBrightness);
+        bindSlider(sliderContrast, spinnerFileAdjustmentContrast);
+        bindSlider(sliderSaturation, spinnerFileAdjustmentSaturation);
+        bindSlider(sliderRotation, spinnerFileAdjustmentRotation);
+        bindSlider(sliderSharpness, spinnerFileAdjustmentSharpness);
+
+        sliderSharpness.setOnMouseReleased(e -> applySharpnessToPreview((float) sliderSharpness.getValue() / 100f));
+
         setSessionControlsDisabled(true);
-        lblSessionStatus.setText("Press Session Startup to configure and begin.");
         refreshStatusBar();
-        updatePageInfoLabel();
+        updateCurrentPageLabel();
+        updateCurrentDocumentLabel();
     }
 
     private void initializeProfileComboBox() {
         if (modelFacade == null) return;
-        User user = modelFacade.getSessionModel().getCurrentUser();
-        if (user.getProfiles().isEmpty() && !user.isAdmin()) return;
 
-        if (user.isAdmin()) { user.setProfiles(modelFacade.getProfileModel().getProfiles()); }
+        if (currentUser.getProfiles().isEmpty() && !currentUser.isAdmin()) return;
 
-        comboBoxProfiles.getItems().addAll(user.getProfiles());
-
-        // Set a default selected profile if not already selected
-        if (comboBoxProfiles.getValue() == null && !comboBoxProfiles.getItems().isEmpty()) {
-            comboBoxProfiles.getSelectionModel().select(0);
+        if (currentUser.isAdmin()) {
+            currentUser.setProfiles(modelFacade.getProfileModel().getProfiles());
         }
 
-        updateProfileAdjustmentsFields(comboBoxProfiles.getValue());
+        comboBoxProfiles.setItems(FXCollections.observableArrayList(currentUser.getProfiles()));
     }
 
     private void initializeExportComboBoxes() {
@@ -139,11 +164,10 @@ public class ScanController implements Initializable, IViewController {
     /**
      * Initializes the left-panel tree view with icons for Box, Documents, and Files,
      * drag-and-drop functions, reordering, and auto-expand on structural changes.
-     *
-     * todo explain with inline comments
      */
-    private void initializeTreeView(TreeView<TreeNode> treeView) {
-        TreeItem<TreeNode> root = new TreeItem<>();
+    private void initializeTreeView(TreeView<TreeNode> treeView, Box rootBox) {
+        TreeItem<TreeNode> root = new TreeItem<>(rootBox);
+        root.getChildren().clear();
         treeView.setRoot(root);
         treeView.setShowRoot(true);
 
@@ -209,6 +233,7 @@ public class ScanController implements Initializable, IViewController {
                     setText(null);
                     setGraphic(null);
                     setStyle("");
+                    setContextMenu(null);
                     return;
                 }
 
@@ -217,18 +242,42 @@ public class ScanController implements Initializable, IViewController {
 
                 if (object instanceof Box box) {
                     icon.setText("\ue9d9");
-                    icon.getStyleClass().add("tree-cell-box");
                     setText(box.getBoxName());
+                    setStyle(box.isStaged() || box.isModified() ? "-fx-font-weight: bold;" : "");
+
+                    ContextMenu contextMenu = new ContextMenu();
+
+                    MenuItem deleteBox = menuItemSetup("Delete Box", "Delete", () -> onDeleteFileOrDocument(null));
+                    MenuItem newDoc = menuItemSetup("New Document", "Ctrl + N", () -> onNewDocument());
+
+                    contextMenu.getItems().addAll(deleteBox, newDoc);
+                    setContextMenu(contextMenu);
                 } else if (object instanceof Document document) {
                     icon.setText("\ue963");
-                    icon.getStyleClass().add("tree-cell-doc");
-                    setText(documentLabel(document));
-                    setStyle(document.isStaged() || document.isModified() ? "-fx-font-weight: bold;" : ""); // styling of text for whether they are staged, modified or persisted
+                    setText(setDocumentLabel(document));
+                    setStyle(document.isStaged() || document.isModified() ? "-fx-font-weight: bold;" : "");
+
+                    ContextMenu contextMenu = new ContextMenu();
+
+                    MenuItem deleteDoc = menuItemSetup("Delete Document", "Delete", () -> onDeleteFileOrDocument(null));
+
+                    contextMenu.getItems().add(deleteDoc);
+                    setContextMenu(contextMenu);
                 } else if (object instanceof File file) {
                     icon.setText("\ue958");
-                    icon.getStyleClass().add("tree-cell-file");
-                    setText(fileLabel(file));
-                    setStyle(file.isStaged() ? "-fx-font-weight: bold;" : ""); // styling of text for whether they are staged or persisted
+                    setText(setFileLabel(file));
+                    setStyle(file.isStaged() ? "-fx-font-weight: bold;" : "");
+
+                    // context menu :)
+                    ContextMenu contextMenu = new ContextMenu();
+
+                    MenuItem splitBefore = menuItemSetup("Split Before", "Ctrl + A", () -> onSplitDocument(0));
+                    MenuItem splitAfter = menuItemSetup("Split After", "Ctrl + D", () -> onSplitDocument(1));
+
+                    MenuItem deleteFile = menuItemSetup("Delete File", "Delete", () -> onDeleteFileOrDocument(null));
+
+                    contextMenu.getItems().addAll(splitBefore, splitAfter, deleteFile);
+                    setContextMenu(contextMenu);
                 }
 
                 setGraphic(icon);
@@ -246,98 +295,73 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void initializeKeyboardShortcuts() {
-        pageGrid.sceneProperty().addListener((obs, oldScene, scene) -> {
-            if (scene == null) return;
+        // Build the shortcut map for the Scan workspace
+        Map<KeyCodeCombination, Runnable> shortcuts = new HashMap<>();
 
-            scene.setOnKeyPressed(e -> {
-                switch (e.getCode()) {
-                    case ENTER -> {
-                        onScan(null);
-                        e.consume();
-                    }
-                    case LEFT -> {
-                        if (e.isControlDown()) {
-                            onRotateLeft(null);
-                        } else {
-                            onNavPrev(null);
-                        }
-                        e.consume();
-                    }
-                    case RIGHT -> {
-                        if (e.isControlDown()) {
-                            onRotateRight(null);
-                        } else {
-                            onNavNext(null);
-                        }
-                        e.consume();
-                    }
-                    case PAGE_UP -> {
-                        onNavFirst(null);
-                        e.consume();
-                    }
-                    case PAGE_DOWN -> {
-                        onNavLast(null);
-                        e.consume();
-                    }
-                    case DELETE -> {
-                        onDeleteFileOrDocument(null);
-                        e.consume();
-                    }
-                    case N -> {
-                        if (e.isControlDown()) {
-                            onNewDocument(null);
-                            e.consume();
-                        }
-                    }
-                    case E -> {
-                        if (e.isControlDown()) {
-                            onExport(null);
-                            e.consume();
-                        }
-                    }
-                    case S -> {
-                        if (e.isControlDown()) {
-                            onSessionStartup(null);
-                            e.consume();
-                        }
-                    }
-                    case ESCAPE -> {
-                        onStop(null);
-                        e.consume();
-                    }
-                    case UP -> {
-                        onNavPrev(null);
-                        e.consume();
-                    }
-                    case DOWN -> {
-                        onNavNext(null);
-                        e.consume();
-                    }
-                    case F2 -> {
-                        darkMode.setSelected(!darkMode.isSelected());
-                        ThemeManager.toggle(scene, darkMode.isSelected());;
-                    }
-                    case PLUS, ADD -> {
-                        if (e.isControlDown()) {
-                            onZoomIn(null);
-                            e.consume();
-                        }
-                    }
-                    case MINUS, SUBTRACT -> {
-                        if (e.isControlDown()) {
-                            onZoomOut(null);
-                            e.consume();
-                        }
-                    }
+        shortcuts.put(new KeyCodeCombination(KeyCode.SPACE),
+                () -> { if (!scanning) onScan(null); else onStop(null); });
+        shortcuts.put(new KeyCodeCombination(KeyCode.LEFT),
+                () -> onNavPrev(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.LEFT,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onRotateLeft(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.RIGHT),
+                () -> onNavNext(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.RIGHT,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onRotateRight(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.UP),
+                () -> onNavPrev(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.DOWN),
+                () -> onNavNext(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.PAGE_UP),
+                () -> onNavFirst(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.PAGE_DOWN),
+                () -> onNavLast(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.DELETE),
+                () -> onDeleteFileOrDocument(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.N,
+                        KeyCombination.CONTROL_DOWN),
+                 this::onNewDocument);
+        shortcuts.put(new KeyCodeCombination(KeyCode.A,
+                KeyCombination.CONTROL_DOWN),
+                () -> onSplitDocument(0));
+        shortcuts.put(new KeyCodeCombination(KeyCode.D,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onSplitDocument(1));
+        shortcuts.put(new KeyCodeCombination(KeyCode.E,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onExport(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.S,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onSessionStartup(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.F2),
+                () -> { darkMode.setSelected(!darkMode.isSelected());
+                    ThemeHandler.toggle(pageGrid.getScene(), darkMode.isSelected()); });
+        shortcuts.put(new KeyCodeCombination(KeyCode.PLUS,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onZoomIn(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.ADD,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onZoomIn(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.MINUS,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onZoomOut(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.SUBTRACT,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onZoomOut(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.Z,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onUndo(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.ESCAPE),
+                () -> onExit(null));
+        shortcuts.put(new KeyCodeCombination(KeyCode.F,
+                        KeyCombination.CONTROL_DOWN),
+                () -> onToggleFileAdjustments(null));
 
-                }
-
-            });
-        });
+        GlobalKeyHandler.getInstance().setLayer(shortcuts);
     }
 
-
-    // Session Startup popup
     @FXML
     private void onSessionStartup(ActionEvent e) {
         initializeProfileComboBox();
@@ -346,7 +370,8 @@ public class ScanController implements Initializable, IViewController {
         workspaceView.setDisable(true);
     }
 
-    @FXML private void onSessionPopupClose(ActionEvent e) {
+    @FXML
+    private void onSessionPopupClose(ActionEvent e) {
         sessionPopupOverlay.setVisible(false);
         sessionPopupOverlay.setDisable(true);
         workspaceView.setDisable(false);
@@ -369,16 +394,32 @@ public class ScanController implements Initializable, IViewController {
         }
 
         try {
+            if (scanModel != null) {
+                scanModel.getTargetBox().getDocuments().clear();
+                endScanSession();
+            }
+
             Box activeBox = modelFacade.getBoxModel().getOrCreateSessionBox(boxInput, profile);
+
+            modelFacade.getSessionModel().cleanup();
+
+            boolean locked = modelFacade.getSessionModel().tryStartScanSession(activeBox.getBoxName());
+            if (!locked) {
+                AlertHelper.showError("Box In Use", "This box is currently open in another session.");
+                return;
+            }
+
+            root.setValue(activeBox);
             scanModel = new ScanModel(activeBox);
+            // todo modelFacade.getLogModel().createLog(new Log(currentUser, Integer.parseInt(scanModel.getTargetBox().getBoxName()), EntityType.BOX, LogAction.CREATE, LocalDateTime.now()));
             syncDocumentsFromModel();
+            initializeTreeView(boxTreeView, activeBox);
 
             sessionActive = true;
-            selectedDocument = null;
-            selectedFile = null;
+            selectedBox = activeBox;
 
             setSessionControlsDisabled(false);
-            lblSessionStatus.setText("Profile: " + profile.getProfileName() + "   Box: " + activeBox.getBoxName());
+            lblSessionStatus.setText(""); // TODO display something or nah?
             sessionPopupOverlay.setVisible(false);
             sessionPopupOverlay.setDisable(true);
             workspaceView.setDisable(false);
@@ -395,6 +436,9 @@ public class ScanController implements Initializable, IViewController {
      * A {@value scanDelay} ms delay is inserted after each successful scan
      * so the scanner hardware has time to advance the next page.
      * The first scan of an empty box always fetches a barcode page (enforced by ScanManager).
+     * <p>
+     * Each scan result pushes one undo entry. The undo removes the scanned file.
+     * If a new document was created by a barcode split undo removes that document too.
      */
     @FXML
     private void onScan(ActionEvent e) {
@@ -402,18 +446,52 @@ public class ScanController implements Initializable, IViewController {
 
         scanning = true;
         btnScan.setDisable(true);
+        btnStop.setDisable(false);
 
         scanThread = new Thread(() -> {
             while (scanning) {
                 try {
-                    ScanManager.StoredScan result = scanModel.fetchScan();
+                    StoredScan result = scanModel.fetchScan();
 
                     if (!scanning) break; // stop was pressed during fetch (leave loop)
 
                     Platform.runLater(() -> {
+                        // snapshot document list before sync to detect newly created documents
+                        Set<Document> documentsBefore = new HashSet<>(documents);
+
                         syncDocumentsFromModel();
                         selectPage(result.document(), result.file());
                         rebuild();
+
+                        // determine whether fetchScan created a brand-new document
+                        Document scannedDocument = result.document();
+                        File scannedFile = result.file();
+                        boolean newDocumentCreated = !documentsBefore.contains(scannedDocument);
+
+                        pushUndo(() -> {
+                            scannedDocument.getFiles().remove(scannedFile);
+
+                            // if a new document was created by a barcode split, remove it too
+                            if (newDocumentCreated) {
+                                try {
+                                    scanModel.deleteDocument(scannedDocument);
+                                } catch (Exception ex) {
+                                    ex.printStackTrace();
+                                }
+                            }
+
+                            syncDocumentsFromModel();
+
+                            // move selection to the last remaining page or clear it
+                            List<File> remaining = allPages();
+                            if (remaining.isEmpty()) {
+                                selectedDocument = null;
+                                selectedFile = null;
+                            } else {
+                                selectedFile = remaining.getLast();
+                                selectedDocument = findOwnerDocument(selectedFile);
+                            }
+                        });
                     });
 
                     Thread.sleep(scanDelay);
@@ -426,8 +504,7 @@ public class ScanController implements Initializable, IViewController {
                     Platform.runLater(() -> {
                         btnScan.setDisable(false);
                         btnStop.setDisable(true);
-                        AlertHelper.showError("Scan Failed",
-                                "Scanning stopped. Could not fetch the next page. Please try again.");
+                        AlertHelper.showError("Scan Failed", "Scanning stopped. Could not fetch the next page. Please try again.");
                     });
                     return;
                 }
@@ -457,17 +534,28 @@ public class ScanController implements Initializable, IViewController {
         }
     }
 
-    @FXML
-    private void onNewDocument(ActionEvent e) {
+    /** Creates a new empty document and selects it. */
+    private void onNewDocument() {
         if (!sessionActive || scanModel == null) return;
 
         try {
-            Document newDoc = scanModel.manualSplit();
+            Document newDocument = scanModel.manualSplit();
             syncDocumentsFromModel();
 
-            // select the new document so the tree highlights it;
-            selectedDocument = newDoc;
+            // select the new document so the tree highlights it
+            selectedDocument = newDocument;
             selectedFile = null;
+
+            pushUndo(() -> {
+                try {
+                    scanModel.deleteDocument(newDocument);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+                syncDocumentsFromModel();
+                selectedDocument = null;
+                selectedFile = null;
+            });
 
             rebuild();
         } catch (Exception ex) {
@@ -476,125 +564,321 @@ public class ScanController implements Initializable, IViewController {
         }
     }
 
+    private void endScanSession() {
+        System.out.println("endScanSession called - sessionActive: " + sessionActive + " scanModel: " + scanModel);
+        if (!sessionActive || scanModel == null) {return;}
+
+        try {
+            System.out.println("deleting session for: " + scanModel.getTargetBox().getBoxName());
+            modelFacade.getSessionModel().endScanSession(scanModel.getTargetBox().getBoxName());
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        sessionActive = false;
+        scanModel = null;
+        documents.clear();
+        selectedBox = null;
+        selectedDocument = null;
+        selectedFile = null;
+        undoStack.clear();
+    }
+
     /**
      * TODO: prompt a before or after split while selecting a file
      */
-    @FXML
-    private void onSplitDocument(ActionEvent actionEvent) {
-        // TODO: implement split
+    private void onSplitDocument(int choice) {
+        if (selectedFile == null || selectedDocument == null || scanModel == null || !sessionActive) return;
+
+        List<File> files = selectedDocument.getFiles();
+        int splitIndex = files.indexOf(selectedFile);
+        if (splitIndex <= 0) return; // nothing to split if it's the first page
+        int actualSplitIndex = choice == 0 ? splitIndex : splitIndex + 1;
+
+        try {
+            // collect all files from the split point onwards
+            List<File> toMove = new ArrayList<>(files.subList(actualSplitIndex, files.size()));
+            Document originalDocument = selectedDocument;
+
+            Document newDocument = scanModel.manualSplit();
+            syncDocumentsFromModel();
+            // move files into the new document
+            for (File file : toMove) {
+                originalDocument.getFiles().remove(file);
+                newDocument.getFiles().add(file);
+            }
+
+            selectedDocument = newDocument;
+            selectedFile = toMove.getFirst();
+
+            pushUndo(() -> {
+                // return every moved file to the original document in order
+                for (File file : toMove) {
+                    newDocument.getFiles().remove(file);
+                    originalDocument.getFiles().add(file);
+                }
+                try {
+                    scanModel.deleteDocument(newDocument);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+                syncDocumentsFromModel();
+                selectedDocument = originalDocument;
+                selectedFile = toMove.getFirst();
+            });
+
+            rebuild();
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            AlertHelper.showError("Split Failed", "Could not split the document. Please try again.");
+        }
     }
 
+    private MenuItem menuItemSetup(String command, String shortcut, Runnable onSelected) {
+
+        MenuItem menuItem = new MenuItem();
+
+        Label commandLbl = new Label(command);
+        commandLbl.setMinWidth(120);
+        commandLbl.setMaxWidth(120);
+        commandLbl.setAlignment(Pos.CENTER_LEFT);
+
+        Region growingSpacer = new Region();
+        growingSpacer.setMinWidth(30);
+        HBox.setHgrow(growingSpacer, Priority.ALWAYS);
+
+        Label shortcutLbl = new Label(shortcut);
+        shortcutLbl.setMinWidth(45);
+        shortcutLbl.setAlignment(Pos.CENTER_RIGHT);
+
+        HBox container = new HBox(commandLbl, growingSpacer, shortcutLbl);
+
+        menuItem.setGraphic(container);
+
+        menuItem.setOnAction(e -> {
+            onSelected.run();
+            e.consume();
+        });
+
+        return menuItem;
+
+    }
+
+    /**
+     * Deletes the currently selected file, document, or box.
+     * <p>
+     * File deletion also deletes any documents that are left empty afterward.
+     * <p>
+     * Undo for a file re-inserts it at its original index in its owner document,
+     * and re-inserts any documents that were auto-removed because they became empty.
+     * Undo for a document re-inserts the entire document (with its files) at its
+     * original position in the list.
+     */
     @FXML
     private void onDeleteFileOrDocument(ActionEvent e) {
         if (scanModel == null || !sessionActive) return;
 
         try {
             if (selectedFile != null) {
-                int deletedIndex = currentPageIndex();
-                scanModel.deleteFile(selectedFile);
+                Document ownerDoc = findOwnerDocument(selectedFile);
+                if (ownerDoc == null) return;
 
-                List<Document> emptyDocuments = new ArrayList<>(documents);
-                emptyDocuments.removeIf(document -> !document.getFiles().isEmpty());
-                for (Document emptyDocument : emptyDocuments) {
-                    scanModel.deleteDocument(emptyDocument);
+                // capture position before any changes
+                final int fileIndex  = ownerDoc.getFiles().indexOf(selectedFile);
+                final File capturedFile = selectedFile;
+                final Document capturedOwnerDoc = ownerDoc;
+
+                // snapshot every document that will be auto-removed after the file deletion
+                final List<AbstractMap.SimpleEntry<Integer, Document>> docsToRestore = new ArrayList<>();
+                for (int i = 0; i < documents.size(); i++) {
+                    Document doc = documents.get(i);
+                    if (doc.getFiles().isEmpty() || (doc == ownerDoc && doc.getFiles().size() == 1)) {
+                        docsToRestore.add(new AbstractMap.SimpleEntry<>(i, doc));
+                    }
                 }
 
-                syncDocumentsFromModel(); // resync the observable list so that it matches the models
+                int deletedPageIndex = currentPageIndex();
+                scanModel.deleteFile(capturedFile);
 
-                // clear selection if nothing left, else select nearest file
+                List<Document> emptyDocuments = new ArrayList<>(documents);
+                emptyDocuments.removeIf(doc -> !doc.getFiles().isEmpty());
+                for (Document emptyDoc : emptyDocuments) {
+                    scanModel.deleteDocument(emptyDoc);
+                }
+
+                syncDocumentsFromModel();
+
                 List<File> remaining = allPages();
                 if (remaining.isEmpty()) {
                     selectedDocument = null;
                     selectedFile = null;
                 } else {
-                    int next = Math.min(deletedIndex, remaining.size() - 1);
+                    int next = Math.min(deletedPageIndex, remaining.size() - 1);
                     selectedFile = remaining.get(Math.max(next, 0));
                     selectedDocument = findOwnerDocument(selectedFile);
                 }
 
+                pushUndo(() -> {
+                    List<Document> modelDocs = scanModel.getTargetBox().getDocuments();
+
+                    // re-insert auto-removed documents at their original positions
+                    docsToRestore.sort(Comparator.comparingInt(AbstractMap.SimpleEntry::getKey));
+                    for (AbstractMap.SimpleEntry<Integer, Document> entry : docsToRestore) {
+                        if (!modelDocs.contains(entry.getValue())) {
+                            int idx = Math.min(entry.getKey(), modelDocs.size());
+                            modelDocs.add(idx, entry.getValue());
+                        }
+                    }
+
+                    // re-insert the deleted file into its owner document
+                    if (!capturedOwnerDoc.getFiles().contains(capturedFile)) {
+                        int insertIdx = Math.min(fileIndex, capturedOwnerDoc.getFiles().size());
+                        capturedOwnerDoc.getFiles().add(insertIdx, capturedFile);
+                    }
+
+                    syncDocumentsFromModel();
+                    selectPage(capturedOwnerDoc, capturedFile);
+                });
+
             } else if (selectedDocument != null) {
-                scanModel.deleteDocument(selectedDocument);
+                final int documentIndex = documents.indexOf(selectedDocument);
+                final Document capturedDoc = selectedDocument;
+                // snapshot the file list so undo can restore the full document contents
+                final List<File> capturedFiles = new ArrayList<>(selectedDocument.getFiles());
+
+                scanModel.deleteDocument(capturedDoc);
                 syncDocumentsFromModel();
                 selectedDocument = null;
                 selectedFile = null;
-            } else return;
+
+                pushUndo(() -> {
+                    List<Document> modelDocs = scanModel.getTargetBox().getDocuments();
+                    if (!modelDocs.contains(capturedDoc)) {
+                        // restore files onto the document object before re-inserting
+                        capturedDoc.getFiles().clear();
+                        capturedDoc.getFiles().addAll(capturedFiles);
+                        int idx = Math.min(documentIndex, modelDocs.size());
+                        modelDocs.add(idx, capturedDoc);
+                    }
+                    syncDocumentsFromModel();
+                    selectedDocument = capturedDoc;
+                    selectedFile = capturedFiles.isEmpty() ? null : capturedFiles.getFirst();
+                });
+
+            } else if (selectedBox != null) {
+                onDeleteBox();
+            }else return;
 
             rebuild();
         } catch (Exception ex) {
             ex.printStackTrace();
-            AlertHelper.showError("Delete Failed", "Could not delete the selected "
-                    + (selectedFile != null ? "file." : "document. ") + "Please try again.");
+            String itemType = selectedFile != null ? "selected file" : selectedDocument != null ? "selected document" : "box";
+            AlertHelper.showError("Delete Failed", "Could not delete the "
+                    + itemType + ". Please try again.");
         }
     }
 
-    @FXML private void onRotateLeft(ActionEvent e)  { rotatePage(-1); }
+    @FXML private void onRotateLeft(ActionEvent e) { rotatePage(-1); }
     @FXML private void onRotateRight(ActionEvent e) { rotatePage(1); }
-    @FXML
-    private void onFileAdjustments(ActionEvent actionEvent) {
-        if (selectedFile == null || scanModel == null) return;
-        populateFileAdjustmentsFields(selectedFile);
-        sessionPopupOverlay1.setVisible(true);
-        sessionPopupOverlay1.setDisable(false);
-        workspaceView.setDisable(true);
-    }
 
     @FXML
-    private void onFileAdjustmentsClose(ActionEvent e) {
-        sessionPopupOverlay1.setVisible(false);
-        sessionPopupOverlay1.setDisable(true);
-        workspaceView.setDisable(false);
+    private void onToggleFileAdjustments(ActionEvent actionEvent) {
+        if (selectedFile == null) return;
+        if (!fileAdjustmentSideMenu.isVisible()) {
+            populateFileAdjustmentsFields(selectedFile);
+            fileAdjustmentSideMenu.setManaged(true);
+            fileAdjustmentSideMenu.setVisible(true);
+        } else {
+            fileAdjustmentSideMenu.setManaged(false);
+            fileAdjustmentSideMenu.setVisible(false);
+        }
     }
 
+    /** Applies slider values as a new {@link FileAdjustmentSettings} to the selected file. */
     @FXML
     private void onApplyFileAdjustments(ActionEvent e) {
         if (selectedFile == null || scanModel == null) return;
         try {
-            int rotation = parseRotationField(txtFldIndividualFileRotation);
-            double hue = parseDoubleField(txtFldIndividualFileHue,"Hue",-1.0, 1.0);
-            double brightness = parseDoubleField(txtFldIndividualFileBrightness,"Brightness",-1.0,1.0);
-            double contrast = parseDoubleField(txtFldIndividualFileContrast,"Contrast",-1.0,1.0);
-            double saturation = parseDoubleField(txtFldIndividualFileSaturation,"Saturation",-1.0,1.0);
+            int rotation = (int) sliderRotation.getValue();
+            double hue = sliderHue.getValue();
+            double brightness = sliderBrightness.getValue();
+            double contrast = sliderContrast.getValue();
+            double saturation = sliderSaturation.getValue();
+            double sharpness = sliderSharpness.getValue();
 
-            FileAdjustmentSettings settings = new FileAdjustmentSettings(rotation, hue, brightness, contrast, saturation);
-            scanModel.updateFileSettings(selectedFile, settings);
+            // snapshot old settings into a copy before any mutation
+            FileAdjustmentSettings oldSettings = new FileAdjustmentSettings(selectedFile.getRotation(), selectedFile.getHue(), selectedFile.getBrightness(), selectedFile.getContrast(), selectedFile.getSaturation(), selectedFile.getSharpness());
+            FileAdjustmentSettings newSettings = new FileAdjustmentSettings(rotation, hue, brightness, contrast, saturation, sharpness);
+
+            final File capturedFile = selectedFile;
+            scanModel.updateFileSettings(capturedFile, newSettings);
+
+            pushUndo(() -> {
+                try {
+                    scanModel.updateFileSettings(capturedFile, oldSettings);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            });
+
             rebuildPreviewCard();
-            onFileAdjustmentsClose(null);
         } catch (IllegalArgumentException ex) {
             AlertHelper.showError("Invalid Input", ex.getMessage());
+            // TODO add visual feedback
         } catch (Exception ex) {
             ex.printStackTrace();
             AlertHelper.showError("Settings Failed", "Could not apply file settings. Please try again.");
         }
     }
 
-    private int parseRotationField(TextField field) {
-        try {
-            return Integer.parseInt(field.getText().trim());
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Rotation must be a whole number (0, 90, 180 or 270).");
-        }
+    private void onDeleteBox() {
+        AlertHelper.showConfirmation("Delete Box", "Are you sure you want to delete this box?\n"
+        + "This action is permanent and cannot be undone.", () -> {
+            try {
+                scanModel.deleteBox();
+                modelFacade.getBoxModel().deleteBox(scanModel.getTargetBox());
+                modelFacade.getLogModel().createLog(new Log(currentUser, Integer.parseInt(scanModel.getTargetBox().getBoxName()), EntityType.BOX, LogAction.DELETE, LocalDateTime.now()));
+                boxTreeView.setShowRoot(false);
+
+                endScanSession();
+
+                setSessionControlsDisabled(true);
+                sessionPopupOverlay.setVisible(true);
+                sessionPopupOverlay.setDisable(false);
+                workspaceView.setDisable(true);
+                lblSessionStatus.setText("Press Session Startup to configure and begin.");
+
+                rebuild();
+            }
+            catch (Exception e) {
+                e.printStackTrace();
+            }
+
+        });
+
     }
 
-    private double parseDoubleField(TextField field, String name, double min, double max) {
-        double value;
-        try {
-            value = Double.parseDouble(field.getText().trim());
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException(name + " must be a number between " + min + " and " + max + ".");
-        }
-        if (value < min || value > max) {
-            throw new IllegalArgumentException(name + " must be between " + min + " and " + max + ".");
-        }
-        return value;
-    }
-
+    /** Rotates the selected file by {@code spinnerRotation} degrees in the given direction. */
     private void rotatePage(int direction) {
         if (selectedFile == null || scanModel == null) return;
 
         int degrees = spinnerRotation.getValue() * direction;
-        int rotation = normaliseRotation(selectedFile.getRotation() + degrees);
+        int oldRotation = selectedFile.getRotation();
+        int newRotation = normalizeRotation(oldRotation + degrees);
+
         try {
-            scanModel.updateFileRotation(selectedFile, rotation);
+            final File capturedFile = selectedFile;
+            scanModel.updateFileRotation(capturedFile, newRotation);
+
+            pushUndo(() -> {
+                try {
+                    scanModel.updateFileRotation(capturedFile, oldRotation);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            });
+
             rebuildPreviewCard();
         } catch (Exception ex) {
             ex.printStackTrace();
@@ -604,16 +888,14 @@ public class ScanController implements Initializable, IViewController {
 
     // TreeView navigation
     @FXML private void onNavFirst(ActionEvent e) { navigateTo(0); }
-    @FXML private void onNavPrev(ActionEvent e)  { navigateTo(currentPageIndex() - 1); }
-    @FXML private void onNavNext(ActionEvent e)  { navigateTo(currentPageIndex() + 1); }
-    @FXML private void onNavLast(ActionEvent e)  { navigateTo(allPages().size() - 1); }
-
-    private boolean navigating = false;
+    @FXML private void onNavPrev(ActionEvent e) { navigateTo(currentPageIndex() - 1); }
+    @FXML private void onNavNext(ActionEvent e) { navigateTo(currentPageIndex() + 1); }
+    @FXML private void onNavLast(ActionEvent e) { navigateTo(allPages().size() - 1); }
 
     private void navigateTo(int index) {
         List<File> all = allPages();
         if (all.isEmpty()) return;
-        index = Math.max(0, Math.min(index, all.size() - 1));
+        index = Math.clamp(index, 0, all.size() - 1);
         File target = all.get(index);
         for (Document document : documents) {
             if (document.getFiles().contains(target)) {
@@ -622,7 +904,7 @@ public class ScanController implements Initializable, IViewController {
             }
         }
 
-        // Detach listener, sync tree, then reattach — prevents selection event snapping back
+        // prevents bugs with treeSelectionListener sometimes re-selecting the previous selection with onTreeSelectionChanged
         boxTreeView.getSelectionModel().selectedItemProperty().removeListener(treeSelectionListener);
         rebuildPreviewCard();
         syncTreeSelection();
@@ -657,44 +939,90 @@ public class ScanController implements Initializable, IViewController {
         ExportMode mode = comboBoxExport.getValue();
         if (mode == null) {
             AlertHelper.showError("Export", "Please select an export mode.");
+            // TODO add visual feedback
             return;
         }
 
-        // ask user where to save the export
         DirectoryChooser chooser = new DirectoryChooser();
         chooser.setTitle("Choose Export Destination");
         java.io.File exportDirectory = chooser.showDialog(currentStage);
-        if (exportDirectory == null) return; // user cancelled
+        if (exportDirectory == null) return; // user canceled
 
-        try {
-            scanModel.save(); // persist staged data first
-            scanModel.export(exportDirectory, mode);
+        Task<Void> exportTask = new Task<>() {
+            @Override
+            protected Void call() throws Exception {
+                scanModel.save();
+                scanModel.export(exportDirectory, mode, progress -> updateProgress(progress * 100, 100));
+                return null;
+            }
+        };
+
+        progressBarExport.progressProperty().bind(exportTask.progressProperty());
+        setExportInProgress(true);
+
+        exportTask.setOnSucceeded(event -> {
+            try {
+                progressBarExport.progressProperty().unbind();
+                setExportInProgress(false);
+                modelFacade.getLogModel().createLog(new Log(currentUser, scanModel.getTargetBox().getBoxId(), EntityType.BOX, LogAction.EXPORT, LocalDateTime.now()));
+                rebuild();
+                AlertHelper.showInformation("Export Complete", "Export finished. \nFiles saved to:" + exportDirectory.getAbsolutePath());
+            }
+            catch (Exception exception) {
+                AlertHelper.showInformation("Log Failed", "Log failed to be sent to database due to " + exception.getMessage());
+            }
+        });
+
+        exportTask.setOnFailed(event -> {
+            progressBarExport.progressProperty().unbind();
+            setExportInProgress(false);
             rebuild();
-            AlertHelper.showInformation("Export Complete", "Export finished. \nFiles saved to:" + exportDirectory.getAbsolutePath());
-        } catch (Exception ex) {
-            ex.printStackTrace();
             AlertHelper.showError("Export Failed", "Could not export documents. Please try again.");
-        }
+        });
+
+        Thread thread = new Thread(exportTask);
+        thread.setDaemon(true);
+        thread.start();
+
     }
 
     @FXML
     private void onUndo(ActionEvent e) {
-        // TODO: implement undo
+        if (undoStack.isEmpty()) return;
+        undoStack.pop().run();
+        btnUndo.setDisable(undoStack.isEmpty());
+        rebuild();
+    }
+
+    private void pushUndo(Runnable inverse) {
+        if (undoStack.size() >= maxUndos) undoStack.removeLast();
+        undoStack.push(inverse);
+        btnUndo.setDisable(false);
     }
 
     @FXML
-    private void onDarkModeToggle() { ThemeManager.toggle(currentStage.getScene(), darkMode.isSelected()); }
+    private void onDarkModeToggle() { ThemeHandler.toggle(currentStage.getScene(), darkMode.isSelected()); }
 
     @FXML
     private void onExit(ActionEvent actionEvent) {
         AlertHelper.showConfirmation("Exit Window", "Are you sure you want to exit?\n"
                 + "Any unsaved progress will be deleted.", () -> {
             try {
-                User user = modelFacade.getSessionModel().getCurrentUser();
-                ViewHandler handler = user.isAdmin() ? ViewHandler.ADMIN : ViewHandler.LOGIN;
+                ViewHandler handler = currentUser.isAdmin() ? ViewHandler.ADMIN : ViewHandler.LOGIN;
                 handler.reset();
-                handler.show(modelFacade);
-                modelFacade.getSessionModel().logout();
+
+                endScanSession();
+
+                Stage stage = new Stage();
+                if (!currentUser.isAdmin()) {
+                    modelFacade.getSessionModel().logout();
+                }
+                else {
+                    stage.setMinWidth(1366);
+                    stage.setMinHeight(768);
+                    stage.setMaximized(true);
+                }
+                handler.show(modelFacade, stage);
                 currentStage.close();
             } catch (Exception e) {
                 e.printStackTrace();
@@ -704,13 +1032,13 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void onTreeSelectionChanged(TreeItem<TreeNode> item) {
-        if (navigating) return;
-        if (item == null || item.getParent() == null || item.getValue() == null) return;
+        if (item == null || item.getValue() == null) return;
 
         TreeNode value = item.getValue();
         if (value instanceof Document document) {
             selectedDocument = document;
             selectedFile = null;
+            selectedBox = null;
         } else if (value instanceof File file) {
             for (Document document : documents) {
                 if (document.getFiles().contains(file)) {
@@ -718,21 +1046,36 @@ public class ScanController implements Initializable, IViewController {
                     break;
                 }
             }
+        } else if (value instanceof Box box) {
+            selectedBox = box;
+            selectedDocument = null;
+            selectedFile = null;
         }
 
         rebuildPreviewCard();
     }
 
+    /** Moves {@code file} to the end of {@code target}'s file list. */
     private boolean moveFileToDocument(File file, Document target) {
         Document source = findOwnerDocument(file);
         if (source == null || source == target) return false;
 
+        final int originalIndex = source.getFiles().indexOf(file);
         source.getFiles().remove(file);
         target.getFiles().add(file);
         persistFileMoved(file, target);
+
+        pushUndo(() -> {
+            target.getFiles().remove(file);
+            int restoreIdx = Math.min(originalIndex, source.getFiles().size());
+            source.getFiles().add(restoreIdx, file);
+            persistFileMoved(file, source);
+        });
+
         return true;
     }
 
+    /** Inserts {@code dragged} immediately before {@code targetFile}, possibly moving it to a different document. */
     private boolean moveFileBefore(File dragged, File targetFile) {
         if (dragged == targetFile) return false;
 
@@ -740,19 +1083,40 @@ public class ScanController implements Initializable, IViewController {
         Document targetOwner  = findOwnerDocument(targetFile);
         if (draggedOwner == null || targetOwner == null) return false;
 
+        final int originalIndex = draggedOwner.getFiles().indexOf(dragged);
+        final Document originalOwner = draggedOwner;
+
         draggedOwner.getFiles().remove(dragged);
         int insertIndex = targetOwner.getFiles().indexOf(targetFile);
         targetOwner.getFiles().add(insertIndex, dragged);
         persistFileMoved(dragged, targetOwner);
+
+        pushUndo(() -> {
+            targetOwner.getFiles().remove(dragged);
+            int restoreIdx = Math.min(originalIndex, originalOwner.getFiles().size());
+            originalOwner.getFiles().add(restoreIdx, dragged);
+            persistFileMoved(dragged, originalOwner);
+        });
+
         return true;
     }
 
+    /** Moves {@code dragged} immediately before {@code target} in the document list. */
     private boolean reorderDocument(Document dragged, Document target) {
         if (dragged == target) return false;
+
+        final int originalIndex = documents.indexOf(dragged);
 
         documents.remove(dragged);
         int insertIndex = documents.indexOf(target);
         documents.add(insertIndex, dragged);
+
+        pushUndo(() -> {
+            documents.remove(dragged);
+            int restoreIdx = Math.min(originalIndex, documents.size());
+            documents.add(restoreIdx, dragged);
+        });
+
         return true;
     }
 
@@ -779,14 +1143,33 @@ public class ScanController implements Initializable, IViewController {
      */
     private void rebuildPreviewCard() {
         pageGrid.getChildren().clear();
+        currentPreviewImageView = null;
 
-        if (selectedDocument != null && selectedFile != null) {
-            pageGrid.getChildren().add(buildPageCard(selectedDocument, selectedFile));
-        } else if (selectedDocument != null && !selectedDocument.getFiles().isEmpty()) {
-            pageGrid.getChildren().add(buildPageCard(selectedDocument, selectedDocument.getFiles().getFirst()));
+        for (Document document : documents) {
+            // if no box is selected and this document is not the selected document then skip it
+            if (selectedBox == null && document != selectedDocument) continue;
+            for (File file : document.getFiles()) {
+                // if no file is selected and this file is not the selected file then skip it
+                if (selectedFile != null && file != selectedFile) continue;
+                pageGrid.getChildren().add(buildThumbnailCard(document, file));
+            }
         }
 
-        updatePageInfoLabel();
+        if (selectedFile != null) {
+            btnFileAdjustments.setManaged(true);
+            btnFileAdjustments.setVisible(true);
+            if (fileAdjustmentSideMenu.isVisible()) {
+                populateFileAdjustmentsFields(selectedFile);
+            }
+        } else {
+            fileAdjustmentSideMenu.setManaged(false);
+            fileAdjustmentSideMenu.setVisible(false);
+            btnFileAdjustments.setManaged(false);
+            btnFileAdjustments.setVisible(false);
+        }
+
+        updateCurrentPageLabel();
+        updateCurrentDocumentLabel();
         lblEmptyState.setVisible(pageGrid.getChildren().isEmpty());
     }
 
@@ -803,7 +1186,6 @@ public class ScanController implements Initializable, IViewController {
             root.getChildren().add(docItem);
         }
 
-        // Sync tree selection with selectedFile / selectedDocument
         syncTreeSelection();
     }
 
@@ -838,79 +1220,113 @@ public class ScanController implements Initializable, IViewController {
         stPagesLabel.setText("Files: " + totalPageCount());
     }
 
-    private void updatePageInfoLabel() {
-        List<File> all = allPages();
-        int index = currentPageIndex();
-        if (all.isEmpty() || index < 0) {
-            pageInfoLabel.setText("0 / 0");
+    private void updateCurrentPageLabel() {
+        if (selectedFile == null || selectedDocument == null) {
+            lblCurrentPage.setText("File: 0 / 0");
             return;
         }
-        pageInfoLabel.setText((index + 1) + " / " + all.size());
+
+        int pageIndex = selectedDocument.getFiles().indexOf(selectedFile);
+        int pageCount = selectedDocument.getFiles().size();
+
+        if (pageIndex < 0) {
+            lblCurrentPage.setText("File: 0 / 0");
+            return;
+        }
+
+        lblCurrentPage.setText("File: " + (pageIndex + 1) + " / " + pageCount);
     }
 
-    private VBox buildPageCard(Document document, File file) {
-        double cw = cardWidth();
-        double ch = cardHeight();
-
-        ImageView thumb = new ImageView();
-        if (file.getImageData() != null) {
-            Image image = createPreviewImage(file.getImageData(), cw - 8, ch - 44);
-            if (!image.isError()) {
-                thumb.setImage(image);
-            }
+    private void updateCurrentDocumentLabel() {
+        if (selectedDocument == null || documents.isEmpty()) {
+            lblCurrentDocument.setText("Doc: 0");
+            return;
         }
-        thumb.setFitWidth(cw - 8);
-        thumb.setFitHeight(ch - 44);
-        thumb.setPreserveRatio(true);
-        thumb.setEffect(new ColorAdjust(file.getHue() / 100, file.getSaturation() / 100, file.getBrightness() / 100, file.getContrast() / 100));
+        int docIndex = documents.indexOf(selectedDocument);
+        if (docIndex < 0) {
+            lblCurrentDocument.setText("Doc: 0");
+            return;
+        }
+        lblCurrentDocument.setText("Doc: " + (docIndex + 1));
+    }
 
-        Label nameLabel = new Label(fileLabel(file));
-        nameLabel.getStyleClass().add("lbl");
-        nameLabel.setMaxWidth(cw - 8);
+    private VBox buildThumbnailCard(Document document, File file) {
+        double thumbWidth = selectedFile != null ? 400 * zoomLevel : 380 * zoomLevel; // A4 ratio
+        double thumbHeight = selectedFile != null ? 566 * zoomLevel : 538 * zoomLevel; // A4 ratio
 
-        Label docLabel = new Label(documentLabel(document));
-        docLabel.getStyleClass().add("lbl");
-        docLabel.setMaxWidth(cw - 8);
-        docLabel.setStyle("-fx-font-size:9;");
+        ImageView thumbnail = new ImageView();
+        thumbnail.setPreserveRatio(true);
 
-        VBox card = new VBox(4, thumb, nameLabel, docLabel);
-        card.setPrefWidth(cw);
-        card.setPrefHeight(ch);
+        int rotation = file.getRotation();
+        boolean sideways = (rotation == 90 || rotation == 270);
+        thumbnail.setFitWidth(sideways ? thumbHeight - 30 : thumbWidth - 8);
+        thumbnail.setFitHeight(sideways ? thumbWidth - 8 : thumbHeight - (selectedBox != null ? 50 : 30));
+        thumbnail.setRotate(rotation);
+        thumbnail.setEffect(new ColorAdjust(file.getHue() / 100, file.getSaturation() / 100, file.getBrightness() / 100, file.getContrast() / 100));
+
+        // loading screen
+        Thread loader = new Thread(() -> {
+            try {
+                scanModel.loadImageData(file);
+                Image image = file.getPreviewImage();
+
+                if (file.getSharpness() != 0 && file.getImageData() != null) {
+                    image = buildSharpImage(file,(float) file.getSharpness() / 100f);
+                }
+                final Image finalImage = image;
+                if (image != null && !image.isError()) {
+                    // TODO add somethings to tell its buffering/loading
+                    Platform.runLater(() -> thumbnail.setImage(finalImage));
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        });
+        loader.setDaemon(true);
+        loader.start();
+
+        Label lblFile = new Label(setFileLabel(file));
+        lblFile.getStyleClass().add("lbl");
+        lblFile.setMaxWidth(thumbWidth - 8);
+        lblFile.setVisible((selectedBox != null || selectedDocument != null) && selectedFile == null);
+        lblFile.setManaged((selectedBox != null || selectedDocument != null) && selectedFile == null);
+
+        Label lblDocument = new Label(setDocumentLabel(document));
+        lblDocument.getStyleClass().add("lbl");
+        lblDocument.setMaxWidth(thumbWidth - 8);
+        lblDocument.setVisible(selectedBox != null && selectedFile == null);
+        lblDocument.setManaged(selectedBox != null && selectedFile == null);
+
+        VBox card = new VBox(4, thumbnail, lblFile, lblDocument);
+        card.setPrefWidth(thumbWidth);
+        card.setPrefHeight(thumbHeight);
         card.setAlignment(Pos.CENTER);
         card.getStyleClass().addAll("card", "card-bg", "shadow");
         card.setPadding(new Insets(4));
-        card.setRotate(file.getRotation());
         card.setUserData(file);
+
+        if (file == selectedFile) {
+            currentPreviewImageView = thumbnail;
+        }
+
         card.setOnMouseClicked(event -> {
             selectPage(document, file);
-            updatePageInfoLabel();
+            updateCurrentPageLabel();
+            updateCurrentDocumentLabel();
+            rebuild();
         });
 
         return card;
     }
 
-    private Image createPreviewImage(byte[] imageData, double width, double height) {
-        try {
-            ImageIO.scanForPlugins();
-            BufferedImage bufferedImage = ImageIO.read(new ByteArrayInputStream(imageData));
-            if (bufferedImage != null) {
-                ByteArrayOutputStream pngOut = new ByteArrayOutputStream();
-                ImageIO.write(bufferedImage, "png", pngOut);
-                return new Image(new ByteArrayInputStream(pngOut.toByteArray()), width, height, true, true);
-            }
-        } catch (Exception ignored) {}
-
-        return new Image(new ByteArrayInputStream(imageData), width, height, true, true);
-    }
-
-    private double cardWidth() { return 520 * zoomLevel; }
-    private double cardHeight() { return 700 * zoomLevel; }
+    // A4 ratio
+    private double cardWidth() { return selectedFile != null ? 400 * zoomLevel : 380 * zoomLevel; }
+    private double cardHeight() { return selectedFile != null ? 566 * zoomLevel : 538 * zoomLevel; }
 
     // ---------- HELPERS ----------
 
     private void updateProfileAdjustmentsFields(Profile profile) {
-        FileAdjustmentSettings settings = profile.getFileAdjustmentSettings();
-        if (settings == null) {
+        if (profile == null || profile.getFileAdjustmentSettings() == null) {
             txtFldGlobalRotation.clear();
             txtFldGlobalHue.clear();
             txtFldGlobalBrightness.clear();
@@ -919,6 +1335,7 @@ public class ScanController implements Initializable, IViewController {
             return;
         }
 
+        FileAdjustmentSettings settings = profile.getFileAdjustmentSettings();
         txtFldGlobalRotation.setText(String.valueOf(settings.getRotation()));
         txtFldGlobalHue.setText(String.valueOf(settings.getHue()));
         txtFldGlobalBrightness.setText(String.valueOf(settings.getBrightness()));
@@ -927,11 +1344,83 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void populateFileAdjustmentsFields(File file) {
-        txtFldIndividualFileRotation.setText(String.valueOf(file.getRotation()));
-        txtFldIndividualFileHue.setText(String.valueOf(file.getHue()));
-        txtFldIndividualFileBrightness.setText(String.valueOf(file.getBrightness()));
-        txtFldIndividualFileContrast.setText(String.valueOf(file.getContrast()));
-        txtFldIndividualFileSaturation.setText(String.valueOf(file.getSaturation()));
+        sliderHue.setValue(file.getHue());
+        sliderBrightness.setValue(file.getBrightness());
+        sliderContrast.setValue(file.getContrast());
+        sliderSaturation.setValue(file.getSaturation());
+        sliderRotation.setValue(file.getRotation());
+        sliderSharpness.setValue(file.getSharpness());
+        applySharpnessToPreview((float) sliderSharpness.getValue() / 100f);
+    }
+
+    private BufferedImage scaleToPreviewSize(BufferedImage source, int width, int height) {
+        java.awt.Image scaled = source.getScaledInstance(width, height, java.awt.Image.SCALE_FAST);
+        BufferedImage result = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
+        result.getGraphics().drawImage(scaled, 0, 0, null);
+        return result;
+    }
+
+    /**
+     * Wires a slider and spinner together so they stay in sync
+     * and triggers a live preview on every slider change.
+     *
+     * @param slider the slider to listen on
+     * @param spinner the spinner to keep in sync with the slider
+     */
+    private void bindSlider(Slider slider, Spinner<Integer> spinner) {
+        slider.valueProperty().addListener((obs, o, newValue) -> {
+            spinner.getValueFactory().setValue(newValue.intValue());
+            applySliderPreview();
+        });
+        spinner.getEditor().textProperty().addListener((obs, o, newValue) -> {
+            try {
+                slider.setValue(Integer.parseInt(newValue));
+            } catch (NumberFormatException ignored) {}
+        });
+    }
+
+    /**
+     * Applies the current slider values as a live preview on the selected File's
+     * image without persisting anything to the File object.
+     */
+    private void applySliderPreview() {
+        if (!fileAdjustmentSideMenu.isVisible() || currentPreviewImageView == null) return;
+
+        currentPreviewImageView.setEffect(new ColorAdjust(
+                sliderHue.getValue() / 100,
+                sliderSaturation.getValue() / 100,
+                sliderBrightness.getValue() / 100,
+                sliderContrast.getValue() / 100
+        ));
+
+        if (!pageGrid.getChildren().isEmpty()) {
+            pageGrid.getChildren().getFirst().setRotate(sliderRotation.getValue());
+        }
+    }
+
+    private void applySharpnessToPreview(float strength) {
+        if (selectedFile == null || currentPreviewImageView == null || selectedFile.getImageData() == null) return;
+        try {
+            Image image = buildSharpImage(selectedFile, strength);
+            if (!image.isError()) {
+                currentPreviewImageView.setImage(image);
+            }
+        }
+        catch (IOException e) {
+            e.printStackTrace();
+        }
+
+    }
+
+    private Image buildSharpImage(File file, float strength) throws IOException {
+        BufferedImage scaled = ImageIO.read(new ByteArrayInputStream(file.getImageData()));
+
+        BufferedImage preview = scanModel.sharpen(scaleToPreviewSize(scaled, (int) cardWidth() - 8, (int) cardHeight() - 44), strength);
+
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        ImageIO.write(preview, "png", out);
+
+        return new Image(new ByteArrayInputStream(out.toByteArray()));
     }
 
     private void selectPage(Document document, File file) {
@@ -955,30 +1444,32 @@ public class ScanController implements Initializable, IViewController {
     private void setSessionControlsDisabled(boolean disabled) {
         btnScan.setDisable(disabled);
         btnStop.setDisable(disabled);
-        btnRotLeft.setDisable(disabled);
-        btnRotRight.setDisable(disabled);
-        btnNewDoc.setDisable(disabled);
-        btnSplitDoc.setDisable(disabled);
-        btnDelete.setDisable(disabled);
         btnUndo.setDisable(disabled);
         btnExport.setDisable(disabled);
         btnZoomOut.setDisable(disabled);
         btnZoomIn.setDisable(disabled);
+        btnRotLeft.setDisable(disabled);
+        btnRotRight.setDisable(disabled);
     }
 
-    private String documentLabel(Document document) {
+    private void setExportInProgress(boolean inProgress) {
+        hboxProgressBarExport.setVisible(inProgress);
+        hboxProgressBarExport.setManaged(inProgress);
+    }
+
+    private String setDocumentLabel(Document document) {
         int position = documents.indexOf(document) + 1;
         return "Document " + position;
     }
 
-    private String fileLabel(File file) {
-        for (Document doc : documents) {
-            int position = doc.getFiles().indexOf(file);
+    private String setFileLabel(File file) {
+        for (Document document : documents) {
+            int position = document.getFiles().indexOf(file);
             if (position >= 0) {
                 return "Page " + (position + 1);
             }
         }
-        return "Page ?"; // should not happen - something's wrong
+        return "Page ?"; // should not happen :o
     }
 
     private int currentPageIndex() {
@@ -990,7 +1481,7 @@ public class ScanController implements Initializable, IViewController {
         return documents.stream().filter(document -> document.getFiles().contains(file)).findFirst().orElse(null);
     }
 
-    private int normaliseRotation(int rotation) {
+    private int normalizeRotation(int rotation) {
         return ((rotation % 360) + 360) % 360;
     }
 }
